--- a/equipment/index.html
+++ b/equipment/index.html
@@ -370,44 +370,69 @@
 	一根淡黃色的蠟燭。它似乎永遠也不會燒盡，且散發出的光芒顯得既怪誕而微弱。它的蠟永遠都是冰涼的。當你把蠟油滴進目標的耳中，你獲得 3 掌握。你可以消耗掌握來對你的目標詢問一個問題。他們將發現自己只能對你如實全盤托出，儘管他們可能並無此意。至於這真相會帶來什麼樣的後果？就是你要去解決的事了。</p></div>
 
 <div class="Move"><p class="MagicItem">回聲之瓶 (The Echo)	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">A seemingly empty bottle. Once unstoppered, the whispers of another plane resound once and fall silent. In the silence, the bearer learns in his soul the coming of one great danger and how he can avoid it. At any point after you use the Echo, you can ignore the results of any single die roll—yours or another player’s—and roll again. Once opened, the Echo is released and gone forever.</p></div>
+<p class="NoIndent">
+	一個看似空空如也的瓶子。一旦瓶口的塞子被拔起，來自另一個位面的低聲細語將迴響發出，並隨即歸於寂靜。在寂靜中，持有者將會打從靈魂知曉一個將要來臨的巨大危險，以及他可以如何躲避這個危險。在你使用回聲之瓶後的任何時候，你可以忽略任何一次擲骰的結果──無論是你或其他玩家的──並重新擲骰。回聲之瓶一旦被開啟，裏頭的回音就會被釋放，永不復返。</p></div>
 
-<div class="Move"><p class="MagicItem">時代紀元之鏡片 (The Epoch Lens)	<span class="Tags">1 重量</span></p>
-<p class="NoIndent">An archmage, old and too frail to leave his tower, crafted this intricate and fragile device of glass and gold to examine the histories and relics he so loved. Looking at an object through the lens reveals visions of who made it and where it came from.</p></div>
+<div class="Move"><p class="MagicItem">世紀鏡片 (The Epoch Lens)	<span class="Tags">1 重量</span></p>
+<p class="NoIndent">
+	一名老邁而太過孱弱以至於無法離開高塔的大法師，為了能好好細查他所鍾愛的歷史和文物而打造了這個以琉璃和黃金製成，既複雜又脆弱的裝置。當透過這個鏡片注視一個物體時，你能夠看見是誰製造了這個物體，而它又是來自何方。</p></div>
 
 <div class="Move"><p class="MagicItem">遠視之石 (Farsight Stone)	<span class="Tags">1 重量</span></p>
-<p class="NoIndent">Swirling clouds fill this smoky orb and those in its presence often hear strange whispers. In ancient times, it was part of a network of such stones, used to communicate and surveil across great distances. When you gaze into the stone, name a location and roll+WIS. ✴On a 10+, you see a clear vision of the location and can maintain it as long as you concentrate on the orb. ✴On a 7–9, you still see the vision, but you draw the attention of some other thing (an angel, a demon, or the holder of another Farsight stone) that uses the stone to surveil you, as well.</p></div>
+<p class="NoIndent">
+	縹緲雲霧在這個煙霧繚繞的球體內部盤旋，且在它面前的人經常能夠聽見奇怪的低語聲。在遠古以前，它曾經是由這類石頭構成的龐大網路的其中之一，用以跨越遙遠的距離彼此溝通和監視。當你凝視著遠視之石時，指定一個地點，並擲+睿知：<br/>
+	✴擲出10+時，你能夠清楚看見該地點的影像，且只要你仍專注於這顆球體上，你就能維持這個影像。<br/>
+	✴擲出7-9時，你仍然能看見該地點，但你同時也引來了其他存在的注意（天使、惡魔、或其他遠視之石的持有者），而他們也將使用遠視之石來監視你的一舉一動。</p></div>
 
-<div class="Move"><p class="MagicItem">The Fiasco Codex	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">A thick tome, said to be penned in the blood of poor fools and robber-barons by some demon prince possessed of dark humor, this tome details tales and stories of those whose ambition overwhelmed their reason. Reading from this tome teaches one the value of clear-headedness but leaves a sense of dread behind. When you read from the Fiasco Codex, Roll+WIS. ✴On a 10+, ask two of the questions below. ✴On a 7–9, ask one.</p>
-<ul><li>What is my greatest opportunity, right now?</li>
-<li>Who can I betray to gain an advantage?</li>
-<li>Who is an ally I should not trust?</li></ul>
-<p class="NoIndent">The codex gives up its answers only once to each reader and takes 2 to 3 hours to read.</p></div>
+<div class="Move"><p class="MagicItem">災厄古典 (The Fiasco Codex)	<span class="Tags">0 重量</span></p>
+<p class="NoIndent">
+	一本厚重的典籍，據說是由某個富黑色幽默的惡魔親王以可憐愚者和強盜貴族的鮮血所書寫而成。這本典籍詳細記載了那些被野心沖昏頭的軼聞和故事。閱讀這本古典能讓人明白保持頭腦清醒的價值所在，但同時也會帶來一股揮之不去的恐懼感。當你閱讀災厄古典時，擲+睿知：<br/>
+	✴擲出10+時，從下列問題中詢問兩項。<br/>
+	✴擲出7-9時，詢問一項。</p>
+<ul>
+	<li>我現在所能遭遇的最大機遇是什麼？</li>
+	<li>我可以背叛誰來取得優勢？</li>
+	<li>誰是我不該信任的盟友？</li></ul>
+<p class="NoIndent">
+	災厄古典只會為每個讀者提供一次答案，且閱讀這本典籍需要花費 2~3 小時的時間。</p></div>
 
 <div class="Move"><p class="MagicItem">Flask of Breath	<span class="Tags">0 重量</span></p>
 <p class="NoIndent">A simple thing, but useful when you need a breath of fresh air. The flask appears empty but cannot be filled, anything added to it simply spills out. This is because the flask is eternally full of air. If placed underwater, it will bubble forever. If pressed to the mouth, one can breathe normally—smoke is no concern, for example. I’m sure you’ll find all sorts of unusual uses for it.</p></div>
 
-<div class="Move"><p class="MagicItem">Folly Held Aloft, The Wax Wings, A Huge Mistake	<span class="Tags">1 重量</span></p>
-<p class="NoIndent">Who hasn’t always wanted to soar the pretty blue sky? In an attempt to grant the wishes of land-bound folk, these great magical wings were created. Known by many names and crafted by as many mages, they commonly take the shape of the wings of whatever local birds hold affection. Worn by means of a harness or, in some dire cases, a surgical procedure.</p>
-<p>When you take to the air with these magical wings, roll+DEX. ✴On a 10+, your flight is controlled and you may stay aloft as long as you like. ✴On a 7–9, you make it aloft but your flight is short or erratic and unpredictable, your choice. ✴On a 6-, you make it aloft, but the coming-down part and everything between is up to the GM.</p></div>
+<div class="Move"><p class="MagicItem">飛翔天際的愚者, 蠟翼, 滔天大錯 (Folly Held Aloft, The Wax Wings, A Huge Mistake)	<span class="Tags">1 重量</span></p>
+<p class="NoIndent">
+	誰不曾想過在那美麗的蒼空間翱翔？為了嘗試實現那被地面束縛之人的願望，這對偉大的魔法翅膀被創造了出來。它有著許多不同的名字、也有無數不同的法師曾經打造過它，它們的外型通常會呈現當地鳥類所鐘愛的羽翼形狀。它透過背帶的方式供使用者穿戴，或者在某些極端情況下藉著手術植入。</p>
+<p>
+	當你使用這對魔法翅膀飛向天空時，擲+敏捷：<br/>
+	✴擲出10+時，你能控制你的飛行，且只要你想的話就能一直待在空中。<br/>
+	✴擲出7-9時，你可以飛到空中，但你只能有短暫的飛行時間、或者飛行過程變得不穩定且無法預測，由你決定。<br/>
+	✴擲出6-時，你可以飛到空中，但降落的環節、以及在降落與升空之間發生的所有事情都將由GM決定。</p></div>
 
 <div class="Move"><p class="MagicItem">不動權杖 (Immovable Rod)	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">A funny metal rod with a button on it. Press the button and the rod just sticks. It freezes in place—in midair, standing up or lying down. It can’t be moved. Pull it, push it, try as hard as you like, the rod stays. Maybe it can be destroyed, maybe it can’t. Push the button again and it’s free—take it along with you. Might be useful to have such a stubborn thing along. </p></div>
+<p class="NoIndent">
+	一根上頭有著按鈕的奇妙金屬權杖。一旦按下按鈕，這個權杖將會被固定。它會整個停滯在原地──在半空中、直直挺立、或者躺倒在地。它將無法被移動。無論你怎麼拉它推它，這根權杖都會維持在原本的位置上。它或許能夠被摧毀，也可能不能。然而，只要再按一次按鈕，它就會恢復自由──隨身帶著它吧。這頑固的玩意兒在一路上可能會意外派上用場。</p></div>
 
-<div class="Move"><p class="MagicItem">Infinite Book	<span class="Tags">1 重量</span></p>
-<p class="NoIndent">This book contains an infinite number of pages in a finite space. With no limit to the pages, everything that ever was, is, or will be is contained somewhere in the book. Luckily the index is great.</p>
-<p>When you spout lore while consulting the book you gain an extra clause: On a 12+, the GM will give a solution to a problem or situation you’re in.</p></div>
+<div class="Move"><p class="MagicItem">無限之書 (Infinite Book)	<span class="Tags">1 重量</span></p>
+<p class="NoIndent">
+	這本書在有限的空間中裝訂著無限數量的書頁。在這無限量的書頁中，所有過去、現在、或未來將有的事物都被記載於這本書的某處。該慶幸的是，這本書的書目索引做得不錯。</p>
+<p>
+	當你在查閱這這本書的時候進行<b>憶述見聞</b>時，你獲得一個額外效果：擲出12+時，GM會為你正遭遇的問題或情境提供一個解決方案。</p></div>
+
 <div class="Move"><p class="MagicItem">Inspectacles	<span class="Tags">0 重量</span></p>
 <p class="NoIndent">Rough-hewn glass in wooden frames. Dinged up and barely held together, they somehow allow the wearer to see much more than their naked eyes might. When you discern realities wearing these gifted lenses, you get to bend the rules a little. On a roll of 10+, ask any three questions you like. They don’t have to be on the list. As long as sight could give you answers, the GM will tell you what you want to know.</p></div>
+
 <div class="Move"><p class="MagicItem">The Ku’meh Maneuver	<span class="Tags">1 重量</span></p>
 <p class="NoIndent">A great, leathery tome worn shiny by the hands of a hundred great generals, this book is often passed from warrior to warrior, from father to son along the great battle lines that have divided Dungeon World’s past. Anyone reading it may, upon finishing for the first time, roll+INT. ✴On a 10+, hold 3. ✴On a 7-9, hold 1. You may spend your hold to advise a companion on some matter of strategic or tactical significance. This advice allows you to, at any time, regardless of distance, roll to aid them on any one roll. On a miss, the GM can hold 1 and spend it to apply -2 to any roll of yours or the poor sap who listened to your advice.</p></div>
 <div class="Move"><p class="MagicItem">Lamented Memento	<span class="Tags">0 重量</span></p>
 <p class="NoIndent">Taking the form of a single lock of bright red hair, bound in a black ribbon and immune to the ravages of time, the Lamented Memento bears a grim enchantment. In it are the memories and emotions of a girl who dealt with Death at the Black Gates so many times that, in the end, they fell in love and she left the world to be with him for a time. Her memory protects the wielder. If he finds himself at the Gates, the Memento can be traded for an automatic result of 10+ on the Last Breath move.</p></div>
-<div class="Move"><p class="MagicItem">Lodestone Shield	<span class="Tags">+1 護甲, 1 重量</span></p>
-<p class="NoIndent">What mixed-up dummy made this? Shields are meant to repel metal, not draw it in! Emblazoned with a lion rampant, the Lodestone Shield has the power to pull blades and arrows to it. When you defend against enemies using metal weapons you can spend one hold, per target, to disarm them. Also, sometimes you’ll find a handful of loose change stuck to it.</p></div>
-<div class="Move"><p class="MagicItem">Map of the Last Patrol	<span class="Tags">0 重量</span></p>
-<p class="NoIndent">An ancient order of brave rangers once patrolled the land, protecting villages and warning kings and queens of encroaching danger. They’re long gone, now, but their legacy remains. This map, when marked with the blood of a group of people, will always show their location—so long as they remain within the bounds of the map. </p></div>
+
+<div class="Move"><p class="MagicItem">磁石之盾 (Lodestone Shield)	<span class="Tags">+1 護甲, 1 重量</span></p>
+<p class="NoIndent">
+	是哪個腦子昏了的白癡做出這個玩意兒的？盾牌是拿來抵制金屬，不是用來吸引金屬的！表面飾有一個躍立的雄獅紋章，磁石之盾擁有著能夠吸引刀刃和箭矢的力量。當你面對使用金屬武器的敵人並進行<b>保衛</b>動作時，你可以為每個目標各消耗 1掌握，來使他們繳械。此外，有時候你會發現一把零錢就這麼黏在盾牌上。</p></div>
+
+<div class="Move"><p class="MagicItem">最後一支巡邏隊的地圖 (Map of the Last Patrol)	<span class="Tags">0 重量</span></p>
+<p class="NoIndent">
+	遠古之前，一支勇敢的遊騎兵部隊曾經在這片土地上巡邏，保護村落，並警告國王和王后關於那侵犯而至的危機。儘管他們早已不復存在，但他們的遺產仍得以存留。當使用一群人的鮮血在這張地圖上作記號時，只要他們仍在這張地圖的範圍內，這張地圖就會一直標示出他們的所在位置。</p></div>
+
 <div class="Move"><p class="MagicItem">Ned’s Head	<span class="Tags">1 重量</span></p>
 <p class="NoIndent">An old skull, missing its jaw and very much worse-for-wear. The skull remembers the folly of its former owner—a man with more honor than sense. Once per night, the owner of the skull can ask “Who has it in for me?” and the skull will give up one name in a sad, lonely voice. If the owner of the skull is ever killed, it disappears surreptitiously. No one knows where it might turn up next.</p></div>
 <div class="Move"><p class="MagicItem">Nightsider’s Key	<span class="Tags">0 重量</span></p>
