--- a/gm/first_session/index.html
+++ b/gm/first_session/index.html
@@ -168,41 +168,66 @@
 
 <hr/>
 <h2>第一場冒險</h2>
-<p class="NoIndent">The first adventure is really about discovering the direction that future sessions will take. Throughout the first adventure keep your eye out for unresolved threats; note dangerous things that are mentioned but not dealt with. These will be fuel for sessions to come.</p>
-<p>Start the session with a group of player characters (maybe all of them) in a tense situation. Use anything that demands action: outside the entrance to a dungeon, ambushed in a fetid swamp, peeking through the crack in a door at the orc guards, or being sentenced before King Levus. Ask questions right away—“who is leading the ambush against you?” or “what did you do to make King Levus so mad?” If the situation stems directly from the characters and your questions, all the better.</p>
-<p>Here’s where the game starts. The players will start saying and doing things, which means they’ll start making moves. For the first session you should watch especially carefully for when moves apply, until the players get the hang of it. Often, in the early sessions, the players will be most comfortable just narrating their actions—this is fine. When a move triggers let them know. Say, “It sounds like you’re trying to…” and then walk them through the move. Players looking for direction will look to their character sheet. When a player just says “I hack and slash him” be quick to ask, “so what are you actually doing?” Ask “How?” or “With what?”</p>
-<p>For the first session, you have a few specific goals:</p>
-<ul><li>Establish details, describe</li>
-<li>Use what they give you</li>
-<li>Ask questions</li>
-<li>Leave blanks</li>
-<li>Look for interesting facts</li>
-<li>Help the players understand the moves</li>
-<li>Give each character a chance to shine</li>
-<li>Introduce NPCs</li></ul>
-<h4>Establish details, describe</h4>
-<p class="NoIndent">All the ideas and visions in your head don’t really exist in the fiction of the game until you share them, describe them, and detail them. The first session is the time to establish the basics of what things look like, who’s in charge, what they wear, what the world is like, what the immediate location is like. Describe everything but keep it brief enough to expand on later. Use a detail or two to make a description really stand out as real.</p>
-<h4>Use what they give you</h4>
-<p class="NoIndent">The best part of the first session is you don’t have to come with anything concrete. You might have a dungeon sketched out but the players provide the real meat—use it. They’ll emerge from the darkness of that first dungeon and when they do and their eyes adjust to the light, you’ll have built up an exciting world to explore with their help. Look at their bonds, their moves, how they answer your questions and use what you find to fill in the world around the characters.</p>
-<h4>Ask questions</h4>
-<p class="NoIndent">You’re using what they give you, right? What if you need more? That’s when you draw it out by asking questions. Poke and prod about specific things. Ask for reactions: “What does Lux think about that?” “Is Avon doing something about it?”</p>
-<p>If you ever find yourself at a loss, pause for a second and ask a question. Ask one character a question about another. When a character does something, ask how a different character feels or reacts. Questions will power your game and make it feel real and exciting. Use the answers you find to fill in what might happen next.</p>
-<h4>Leave blanks</h4>
-<p class="NoIndent">This is one of your principles, but it’s especially true during the first session. Every blank is another cool thing waiting to happen; leave yourself a stock of them.</p>
-<h4>Look for interesting facts</h4>
-<p class="NoIndent">There are some ideas that, when you hear them, just jump out at you. When you hear one of those ideas, just write it down. When a player mentions the Duke of Sorrows being the demon he bargained with, note it. That little fact is the seed for a whole world.</p>
-<h4>Help the players understand the moves</h4>
-<p class="NoIndent">You’ve already read the game, the players may not have, so it’s up to you to help them if they need it. The fact is, they likely won’t need it much. All they have to do is describe what their character does, the rules take care of the rest.</p>
-<p>The one place they may need some help is remembering the triggers for the moves. Keep an ear out for actions that trigger moves, like attacking in melee or consulting their knowledge. After a few moves the players will likely remember them on their own.</p>
-<h4>Give each character a chance to shine</h4>
-<p class="NoIndent">As a fan of the heroes (remember your agenda?) you want to see them do what they do best. Give them a chance at this, not by tailoring every room to their skills, but by portraying a fantastic world (agenda again) where there are many solutions to every challenge.</p>
-<h4>Introduce NPCs</h4>
-<p class="NoIndent">NPCs bring the world to life. If every monster does nothing more than attack and every blacksmith sets out their wares for simple payment the world is dead. Instead give your characters, especially those that the players show an interest in, life (principles, remember?). Introduce NPCs but don’t protect them. The recently deceased Lord of Goblins is just as useful for future adventures as the one who’s still alive.</p>
+<p class="NoIndent">
+	第一場冒險的重點實際上是在找出未來聚會的發展方向。因此，在第一場冒險的整個過程中，記得時時刻刻注意那些尚未被解決的威脅；記下那些被提及，但還未被處理的危險，它們將會成為你在未來聚會中構築冒險故事的材料。</p>
+<p>
+	把一部份玩家角色（或也許全體角色）擺放在一個急迫緊張情境下，並就此讓聚會開始。你可以使用任何需要立即反應的情境：在地城入口的外面、在惡臭沼澤中遭到伏擊、從門口隙縫窺視裏頭的獸人守衛、或在列維斯王的面前被判刑。立刻向玩家們詢問──像是「是誰率領著部隊伏擊你們？」或「你們做了什麼讓列維斯王如此憤怒？」。如果這些情境是直接源自於角色或你先前提出的問題，那就更好了。</p>
+<p>
+	於是遊戲就此展開。玩家們將開始說話並採取行動，這也意味著他們將開始進行動作。在第一次聚會中，你會需要特別留意動作被觸發的時機，直到玩家們逐漸掌握其中的訣竅。通常在聚會初期，玩家們僅僅會描述他們角色採取的行動──這也沒關係，但當他們因此觸發了某個動作時，讓他們知道。你可以說：「聽起來你打算要……」並帶著他們確認動作列表並找出最適合的動作。那些找不到方向的玩家們也會查看他們的角色卡，而當某個玩家只是說：「我要對他進行砍劈動作」時，你應該馬上詢問：「所以你實際上做了什麼？」。詢問「你怎麼做？」或「你用了什麼？」</p>
+<p>
+	在第一次聚會中，你有幾個特定的目標要達成：</p>
+<ul>
+	<li>建立細節，並描述</li>
+	<li>使用他們提供你的材料</li>
+	<li>拋出問題</li>
+	<li>適度留白</li>
+	<li>尋找有趣的事實</li>
+	<li>幫助玩家們熟悉動作</li>
+	<li>給每個角色閃耀的機會</li>
+	<li>讓NPC出場</li></ul>
+
+<h4>建立細節，並描述</h4>
+<p class="NoIndent">
+	所有你腦袋中的想法和畫面在被你分享出來、描述、以及詳述細節之前，都不真正存在於遊戲的故事之中。第一次聚會正是你建立整個故事基礎樣貌的時機：這裡由誰做主、他們穿著如何、這個世界是什麼樣子、周遭環境又是什麼樣子。描述一切，但盡可能簡短，好讓你能在之後擴展它們。透過添加一到兩個細節，使你描述的事物栩栩如生。</p>
+
+<h4>使用他們提供你的材料</h4>
+<p class="NoIndent">
+	第一次聚會最棒的部分，就是你不用事先準備任何具體的東西。你腦中可能會有個地城的骨架，而玩家們將為它提供真正的血肉──利用它們！他們將會從地城的黑暗中走出，而當他們這麼做，且雙眼適應了那昏暗的光線時，你已經在他們的幫助下構築出了一個令人興奮驚奇的世界，等待著他們一探究竟。看看他們的羈絆、看看他們的動作、想想他們是如何回答你提出的問題，並利用你得到的材料去充填圍繞在角色周遭的這個世界。</p>
+
+<h4>拋出問題</h4>
+<p class="NoIndent">
+	你需要他們提供給你的材料來建構這個世界，對吧？但萬一你想要更多的話呢？這時，就是你透過提問來引出答案的時候了。試著戳弄刺激某個特定的議題或事物，並詢問他們的反應：「拉克絲對此會有什麼想法？」、「亞文正在為此做些什麼嗎？」</p>
+<p>
+	如果你發現自己茫然不知所措，你可以暫停一會並拋出問題。也許對某人提出關於另一個角色的問題。或者當某個角色做了某件事時，詢問另一個角色對此有什麼想法或反應。這些問題將會為你的遊戲帶來動力，並讓它變得真實而刺激。利用你得到的答案來構築出接下來可能發生的事情。</p>
+
+<h4>適度留白</h4>
+<p class="NoIndent">
+	這是你的其中一個原則，而它在第一次聚會期間尤其重要。每一處留白都是一個等待發生的酷炫事件；給自己留一些未來發揮的空間吧。</p>
+
+<h4>尋找有趣的事實</h4>
+<p class="NoIndent">
+	有些想法，在你聽到它們的時候，就是會立刻吸引到你的注意。當你聽到任何一個這類想法時，把它們寫下來。當玩家提到悲傷公爵就是那與他交易談判的惡魔時，把它筆記下來。這些微小瑣碎的事實正是構成了整個世界的故事種子。</p>
+
+<h4>幫助玩家們熟悉動作</h4>
+<p class="NoIndent">
+	儘管你已經讀過這個遊戲的規則了，但玩家們可能還沒，因此如果他們需要協助的話，就得由你來教導他們。事實上，他們或許不會太需要它們。他們要做的就只有描述他們角色的行為舉止，並把剩下的一切留給規則處理就好。</p>
+<p>
+	他們唯一可能會需要協助的部分是記住動作的觸發時機。仔細聆聽，注意那些會觸發動作的行動，像是在近身肉搏中發起攻擊、或是回憶查找他們的知識見聞。在實際進行過幾次動作後，通常玩家們就會自己記住這些東西。</p>
+
+<h4>給每個角色閃耀的機會</h4>
+<p class="NoIndent">
+	身為這群英雄們的粉絲（記得你的目標事項嗎？），你會想看到他們做出最棒的表現。給他們機會這麼做，不要讓每一個房間都為他們的技能量身打造，而是描繪出一個精采的奇幻世界（這同樣是你的目標事項），在這裡，每一個他們面對的挑戰都能有許多不同的解決方案。</p>
+
+<h4>讓NPC出場</h4>
+<p class="NoIndent">
+	NPC們的存在讓這個世界充滿生機。倘若每頭怪物除了攻擊以外什麼都不會做、假如每個鐵匠都只會為了單純的報酬擺出他們的商品，那麼這個世界就跟死了沒什麼兩樣。因此，賦予你的角色生命，尤其是那些玩家們感興趣的人物（這是你的原則，記得嗎？）。讓NPC們進到遊戲中，但不要保護他們。那頭在不久前逝去的哥布林領主對未來冒險的影響就跟他活著時一樣有用。</p>
 
 <hr/>
-<h2>第一次聚會之後</h2>
-<p class="NoIndent">Once you’re done with the first session take some time to relax. Let ideas ferment. Don’t rush into the next session.</p>
-<p>Once you’ve had some time to relax and think over the first session it’s time to prepare for the next session. Preparing for the second session takes a few minutes, maybe an hour if this is your first time. You’ll create fronts, maybe make some monsters or custom moves, and generally get an idea of what is going on in the world.</p>
+<h1>第一次聚會之後</h1>
+<p class="NoIndent">
+	在你們結束第一次聚會後，花點時間放鬆，讓靈感與想法發酵。不要急於進到下一次聚會中。</p>
+<p>
+	當你花了點時間放鬆並思考第一次聚會時發生的種種之後，就該是時候為下一次聚會做準備了。準備第二次聚會的過程會花上數分鐘的時間，或如果這是你第一次這麼做，那可能會需要一個小時。你需要創造「前置」、或許創作一些怪物或自訂動作、並對這個世界正在發生的事情有一個大致的理解。</p>
 
 
           </div>
