--- a/gm/first_session/index.html
+++ b/gm/first_session/index.html
@@ -184,7 +184,7 @@
 	<li>尋找有趣的事實</li>
 	<li>幫助玩家們熟悉動作</li>
 	<li>給每個角色閃耀的機會</li>
-	<li>讓NPC出場</li></ul>
+	<li>讓NPC進場</li></ul>
 
 <h4>建立細節，並描述</h4>
 <p class="NoIndent">
@@ -218,7 +218,7 @@
 <p class="NoIndent">
 	身為這群英雄們的粉絲（記得你的目標事項嗎？），你會想看到他們做出最棒的表現。給他們機會這麼做，不要讓每一個房間都為他們的技能量身打造，而是描繪出一個精采的奇幻世界（這同樣是你的目標事項），在這裡，每一個他們面對的挑戰都能有許多不同的解決方案。</p>
 
-<h4>讓NPC出場</h4>
+<h4>讓NPC進場</h4>
 <p class="NoIndent">
 	NPC們的存在讓這個世界充滿生機。倘若每頭怪物除了攻擊以外什麼都不會做、假如每個鐵匠都只會為了單純的報酬擺出他們的商品，那麼這個世界就跟死了沒什麼兩樣。因此，賦予你的角色生命，尤其是那些玩家們感興趣的人物（這是你的原則，記得嗎？）。讓NPC們進到遊戲中，但不要保護他們。那頭在不久前逝去的哥布林領主對未來冒險的影響就跟他活著時一樣有用。</p>
 
