--- a/classes/cleric/spells/index.html
+++ b/classes/cleric/spells/index.html
@@ -291,7 +291,7 @@
     <script>
       $("#sidemenu-topnav").addClass('currentul');
       $("#sidemenu").prepend("<h3>目錄</h3>");
-      $("h2, h1, .MonsterName, .SpellName, .MagicItem").each(function(i) {
+      $("h2, h1, .MonsterName, .SpellName, .MagicItem, .ExtraLayer").each(function(i) {
           var current = $(this);
           current.attr("id", "title" + i);
           var tag = current.prop("tagName");
@@ -309,9 +309,15 @@
           const eng_text = link_text.match(/\((.*)\)/)? link_text.match(/\((.*)\)/)[1]: link_text;
           link_text = link_text.replace(/\(.*\)/, "");
 
-          if(tag=="H2" || tag=="H3"){
+          if(current.context.className=="ExtraLayer"){
+            link_text = " - - "+link_text;
+          }
+          else if(tag=="H2" || tag=="H3"){
             link_text = " - "+link_text;
           }
+          
+
+
           
 
           current.addClass('anchor');
