--- a/gm/fronts/index.html
+++ b/gm/fronts/index.html
@@ -181,109 +181,111 @@
 <p>
 	當你為你添加到前置中的危害取好名稱後，你需要從以下列表中為這些危害分別挑選其所屬的類型。或者你也可以反過來使用這個列表來激發你創造危害的靈感想法：把前置的概念放在心中，仔細閱讀整個列表，並從中挑選一到二個合適的危害。</p>
 <p class="Example">
-	對於我們前置中的三個危害（祕法奧術學院、白淨聖門、和白銀熾天使），我們分別選擇它們的類型為 陰謀團夥、暗黑傳送門、和 天使聖樂隊。</p>
+	對於我們前置中的三個危害（祕法奧術學院、白淨聖門、和白銀熾天使），我們分別選擇它們的類型為 密謀團夥、黑暗傳送門、和 天使聖樂隊。</p>
 
 <hr/>
 <h2 class="ExtraLayer">危害的類型</h2>
 <ul>
-	<li>野心勃勃的組織 (Ambitious Organizations)</li>
-	<li>異位面勢力 (Planar Forces)</li>
+	<li>野心黨眾 (Ambitious Organizations)</li>
+	<li>異界勢力 (Planar Forces)</li>
 	<li>奧法魔敵 (Arcane Enemies)</li>
 	<li>成群部族 (Hordes)</li>
 	<li>詛咒之地 (Cursed Places)</li></ul>
 
-<h3>野心勃勃的組織</h3>
+<h3>野心黨眾</h3>
 <ul>
 	<li>誤入歧途的良善 (<em><b>動力</b>: 不計代價做出「正確」的事</em>)</li>
 	<li>盜賊公會 (<em><b>動力</b>: 透過詭計奪取</em>)</li>
 	<li>邪教 (<em><b>動力</b>: 從內部寄生</em>)</li>
 	<li>宗教組織 (<em><b>動力</b>: 建立並遵循教義</em>)</li>
 	<li>腐敗政府 (<em><b>動力</b>: 維持現狀</em>)</li>
-	<li>陰謀團夥 (<em><b>動力</b>: 吸收握有權力者，成長茁壯</em>)</li></ul>
+	<li>密謀團夥 (<em><b>動力</b>: 吸收握有權力者，成長茁壯</em>)</li></ul>
 
-<h4 style="margin-left: 30px;">野心勃勃的組織 的 GM動作：</h4>
+<h4 style="margin-left: 30px;">野心黨眾 的 GM動作：</h4>
 <ul style="margin-left: 30px;">
-	<li>Attack someone by stealthy means (kidnapping, etc.)</li>
-	<li>Attack someone directly (with a gang or single assailant)</li>
-	<li>Absorb or buy out someone important (an ally, perhaps)</li>
-	<li>Influence a powerful institution (change a law, manipulate doctrine)</li>
-	<li>Establish a new rule (within the organization)</li>
-	<li>Claim territory or resources</li>
-	<li>Negotiate a deal</li>
-	<li>Observe a potential foe in great detail</li></ul>
+	<li>透過隱密的手段攻擊某人 (像是綁架之類的)</li>
+	<li>直接攻擊某人 (派出幫派夥徒或襲擊者)</li>
+	<li>吸收或收買某個重要人物 (也許是一名盟友)</li>
+	<li>左右某個影響深遠的制度 (改變法律、操縱教義)</li>
+	<li>建立一條新的規則 (在組織內部)</li>
+	<li>主張領土或資源的所有權</li>
+	<li>協商達成交易</li>
+	<li>仔細審慎觀察一名潛在的敵人</li></ul>
 
-<h3>異位面勢力</h3>
+<h3>異界勢力</h3>
 <ul>
-	<li>神祇 (<em><b>動力</b>: to gather worshippers</em>)</li>
-	<li>惡魔親王 (<em><b>動力</b>: to open the gates of Hell</em>)</li>
-	<li>元素領主 (<em><b>動力</b>: to tear down creation to its component parts</em>)</li>
-	<li>渾沌軍勢 (<em><b>動力</b>: to destroy all semblance of order</em>)</li>
-	<li>天使聖樂隊 (<em><b>動力</b>: to pass judgement</em>)</li>
-	<li>秩序構裝體 (<em><b>動力</b>: to eliminate perceived disorder</em>)</li></ul>
-<h4 style="margin-left: 30px;">GM Moves for Planar Forces</h4>
+	<li>神祇 (<em><b>動力</b>: 收集信徒</em>)</li>
+	<li>惡魔親王 (<em><b>動力</b>: 開啟地獄之門</em>)</li>
+	<li>元素領主 (<em><b>動力</b>: 把造物分解成它的構成元素</em>)</li>
+	<li>混沌力量 (<em><b>動力</b>: 破壞一切表面上的秩序</em>)</li>
+	<li>天使聖樂隊 (<em><b>動力</b>: 宣布審判</em>)</li>
+	<li>秩序構型 (<em><b>動力</b>: 消弭感知到的混亂</em>)</li></ul>
+<h4 style="margin-left: 30px;">異界勢力 的 GM動作：</h4>
 <ul style="margin-left: 30px;">
-	<li>Turn an organization (corrupt or infiltrate with influence)</li>
-	<li>Give dreams of prophecy</li>
-	<li>Lay a Curse on a foe</li>
-	<li>Extract a promise in exchange for a boon</li>
-	<li>Attack indirectly, through intermediaries</li>
-	<li>Rarely, when the stars are right, attack directly</li>
-	<li>Foster rivalries with other, similar powers</li>
-	<li>Expose someone to a Truth, wanted or otherwise</li></ul>
+	<li>轉變一個組織 (利用影響力腐化或滲透)</li>
+	<li>賜予預言之夢</li>
+	<li>對敵人降下詛咒</li>
+	<li>利用恩惠祝福換取一個承諾</li>
+	<li>透過媒介間接地進行攻擊</li>
+	<li>罕見的，當群星正位時，直接地進行攻擊</li>
+	<li>促進與其他類似力量的競爭</li>
+	<li>讓某人知道真相，無論其意願如何</li></ul>
 
 <h3>奧法魔敵</h3>
-<ul><li>Lord of the Undead (<em><b>動力</b>: to seek true immortality</em>)</li>
-<li>Power-mad Wizard (<em><b>動力</b>: to seek magical power</em>)</li>
-<li>Sentient Artifact (<em><b>動力</b>: to find a worthy wielder</em>)</li>
-<li>Ancient Curse (<em><b>動力</b>: to ensnare</em>)</li>
-<li>Chosen One (<em><b>動力</b>: to fulfill or resent their destiny</em>)</li>
-<li>Dragon (<em><b>動力</b>: to hoard gold and jewels, to protect the clutch</em>)</li></ul>
-<h4 style="margin-left: 30px;">GM Moves for Arcane Enemies</h4>
+<ul>
+	<li>不死者之王 (<em><b>動力</b>: 追尋真正的永生</em>)</li>
+	<li>瘋求力量的巫師 (<em><b>動力</b>: 追尋魔法力量</em>)</li>
+	<li>智能遺物 (<em><b>動力</b>: 找到配得上自己的持有者</em>)</li>
+	<li>遠古詛咒 (<em><b>動力</b>: 使其無法脫身</em>)</li>
+	<li>天選者 (<em><b>動力</b>: 去達成或憎恨他們的天命</em>)</li>
+	<li>龍 (<em><b>動力</b>: 囤積黃金珠寶，守護龍巢</em>)</li></ul>
+<h4 style="margin-left: 30px;">奧法魔敵 的 GM動作：</h4>
 <ul style="margin-left: 30px;">
-	<li>Learn forbidden knowledge</li>
-	<li>Cast a spell over time and space</li>
-	<li>Attack a foe with magic, directly or otherwise</li>
-	<li>Spy on someone with a scrying spell</li>
-	<li>Recruit a follower or toady</li>
-	<li>Tempt someone with promises</li>
-	<li>Demand a sacrifice</li></ul>
+	<li>得知禁忌的知識</li>
+	<li>施放一個超越時空的法術</li>
+	<li>使用魔法攻擊敵人，無論直接與否</li>
+	<li>透過占視法術暗中監視某人</li>
+	<li>招募一名追隨者或馬屁精</li>
+	<li>利用承諾來誘惑某人</li>
+	<li>要求犧牲</li></ul>
 
 <h3>成群部族</h3>
-<ul><li>Wandering Barbarians (<em><b>動力</b>: to grow strong, to drive their enemies before them</em>)</li>
-<li>Humanoid Vermin (<em><b>動力</b>: to breed, to multiply and consume</em>)</li>
-<li>Underground Dwellers (<em><b>動力</b>: to defend the complex from outsiders</em>)</li>
-<li>Plague of the Undead (<em><b>動力</b>: to spread</em>)</li></ul>
-<h4 style="margin-left: 30px;">GM Moves for Hordes</h4>
+<ul>
+	<li>遊蕩蠻族 (<em><b>動力</b>: 茁壯變強，驅趕他們面前的敵人</em>)</li>
+	<li>人型歹匪 (<em><b>動力</b>: 繁衍, 成倍增加並消耗資源</em>)</li>
+	<li>地下棲民 (<em><b>動力</b>: 守護集團不受外來者干擾</em>)</li>
+	<li>亡靈瘟疫 (<em><b>動力</b>: 散播蔓延</em>)</li></ul>
+<h4 style="margin-left: 30px;">成群部族 的 GM動作：</h4>
 <ul style="margin-left: 30px;">
-	<li>Assault a bastion of civilization</li>
-	<li>Embrace internal chaos</li>
-	<li>Change direction suddenly</li>
-	<li>Overwhelm a weaker force</li>
-	<li>Perform a show of dominance</li>
-	<li>Abandon an old home, find a new one</li>
-	<li>Grow in size by breeding or conquest</li>
-	<li>Appoint a champion</li>
-	<li>Declare war and act upon that declaration without hesitation or deliberation</li></ul>
+	<li>侵襲文明社會的堡壘</li>
+	<li>擁抱內部的混亂</li>
+	<li>突然改變方向</li>
+	<li>壓倒另一個較弱的勢力</li>
+	<li>展現出統治地位</li>
+	<li>拋棄舊的住處，找尋新的居所</li>
+	<li>透過繁衍或征服來成長壯大</li>
+	<li>指派一名首席勇士</li>
+	<li>毫不猶豫或遲疑地宣戰，並依照宣言行事</li></ul>
 
 <h3>詛咒之地</h3>
-<ul><li>被遺棄的高塔 (<em><b>動力</b>: to draw in the weak-willed</em>)</li>
-<li>不淨之地 (<em><b>動力</b>: to spawn evil</em>)</li>
-<li>元素渦流 (<em><b>動力</b>: to grow, to tear apart reality</em>)</li>
-<li>暗黑傳送門 (<em><b>動力</b>: to disgorge demons</em>)</li>
-<li>暗影之境 (<em><b>動力</b>: to corrupt or consume the living</em>)</li>
-<li>力量匯聚之地 (<em><b>動力</b>: to be controlled or tamed</em>)</li></ul>
-<h4 style="margin-left: 30px;">GM Moves for Cursed Places</h4>
+<ul><li>被遺棄的高塔 (<em><b>動力</b>: 吸引意志薄弱者</em>)</li>
+<li>不淨之地 (<em><b>動力</b>: 孳生邪惡</em>)</li>
+<li>元素渦流 (<em><b>動力</b>: 茁壯，撕開現實</em>)</li>
+<li>黑暗傳送門 (<em><b>動力</b>: 吞吐出大量惡魔</em>)</li>
+<li>暗影之境 (<em><b>動力</b>: 腐化或吞噬活物</em>)</li>
+<li>力量匯聚之地 (<em><b>動力</b>: 被控制或被馴服</em>)</li></ul>
+<h4 style="margin-left: 30px;">詛咒之地 的 GM動作：</h4>
 <ul style="margin-left: 30px;">
-	<li>Vomit forth a lesser monster</li>
-	<li>Spread to an adjacent place</li>
-	<li>Lure someone in</li>
-	<li>Grow in intensity or depth</li>
-	<li>Leave a lingering effect on an inhabitant or visitor</li>
-	<li>Hide something from sight</li>
-	<li>Offer power</li>
-	<li>Dampen magic or increase its effects</li>
-	<li>Confuse or obfuscate truth or direction</li>
-	<li>Corrupt a natural law</li></ul>
+	<li>吐出一頭弱小怪物</li>
+	<li>蔓延到鄰近地帶</li>
+	<li>引誘某人進入</li>
+	<li>增幅其強度或是深度</li>
+	<li>在居民或訪客身上留下揮之不去的影響</li>
+	<li>隱藏某物</li>
+	<li>提供力量</li>
+	<li>削弱或增強魔法效果</li>
+	<li>混淆或擾亂真相或方向</li>
+	<li>腐壞一條自然規律</li></ul>
 
 <hr/>
 <h3 class="ExtraLayer">描述與登場人物 (Description and Cast)</h3>
