--- a/gm/fronts/index.html
+++ b/gm/fronts/index.html
@@ -288,13 +288,20 @@
 	<li>腐壞一條自然規律</li></ul>
 
 <hr/>
-<h3 class="ExtraLayer">描述與登場人物 (Description and Cast)</h3>
-<p class="NoIndent">Write up something short to remind you just what this danger is about, something to describe it in a nutshell. Don’t worry about where it’s going or what could happen—grim portents and the impending doom will handle that for you; you’ll get to those in a bit. If there are multiple people involved in the danger (an orc warlord and his clansmen, a hateful god and his servants) go ahead and give them names and a detail or two now. Leave yourself some space as you’ll be adding to this section as you play.</p>
+<h3 class="ExtraLayer">描述與登場人物</h3>
+<p class="NoIndent">
+	寫下一些簡短的語句來提醒自己這個危害是關於什麼，概括說明這個危害的內容。先不要煩惱事情會怎麼發展或會發生什麼事──「惡兆」和「臨頭大難」會為你處理這一切；我們很快就會再提到它們。此外，倘若這個危害中涉及了多個人物（比如說獸人軍閥和牠的氏族戰士、可憎的邪神和祂的僕從），那麼現在就為他們取名，並為他們添加一到兩個細節。保留一些空白給自己，讓你能在之後的遊戲過程中再為其添加內容。</p>
 
 <h3 class="ExtraLayer">自訂動作 (Custom Moves)</h3>
-<p class="NoIndent">Sometimes a danger will suggest a move that isn’t covered by any existing ones. You can write custom moves to fill the gaps or to add the right effects for the danger. They can be player moves or GM moves, as you see fit. Of course, if you’re writing a player move, keep your hands off the dice and mind the basic structure of a move. A 10+ is a complete success, while a 7–9 is a partial success. On a miss, maybe the custom move does something specific, or maybe not—maybe you just get to make a move or work towards fulfilling a grim portent. The formatting of these moves varies from move to move.</p>
-<p class="Example">For the Opening of the White Gate, I just know some fool PC is going to end up in the light that spills from the gate, so I’m writing a move to show what might occur.</p>
-<p class="Example">When you <strong>stand in the presence of the Light From Beyond</strong>, roll+WIS: ✴On a 10+ you are judged worthy, the Argent Seraphim will grant you a vision or boon. ✴On a 7-9 you are under suspicion and see a vision of what dark fate might befall you if you do not correct your ways. ✴On a miss, thou art weighed in the balance and art found wanting.</p>
+<p class="NoIndent">
+	有時候你會需要一個未被任何既有動作所涵蓋的動作來處理危害的內容。在這種時候，你編寫一個自訂動作，來填補其中的空缺、或為這個危害添加合適的效果影響。根據你的需求而定，這些自訂動作可以被當作玩家動作、也可以是GM動作。當然，如果你打算編寫新的玩家動作，不要讓你的手碰到骰子，並牢牢記住玩家動作的基本架構：擲出10+時為完全成功，而擲出7-9時則為部份成功。而當擲出失敗時，互許這個自訂動作會帶來某些特定的效果、或也許不會──也許你僅僅是因此得到一個進行動作的機會、或讓某個預先設定的惡兆得以實現。這些動作的格式將依據動作的不同而各有不同。</p>
+<p class="Example">
+	對「白淨聖門的開啟」這個前置而言，我知道某幾個愚蠢的玩家角色一定會嘗試踏進從聖門中溢散而出的光芒中，因此我編寫了一個動作，用以表示這可能會導致的情況。</p>
+<p class="Example">
+	當你<strong>站立在自彼端溢散的光芒之中</strong>時，擲+睿知：<br/>
+	✴擲出10+時，你被判為有價值之人，白銀熾天使將賜予你一個未來預景或祝福。<br/>
+	✴擲出7-9時，你遭受懷疑，並看見關於漆黑命運的預景，只要你不改正行為，它就可能降臨在你身上。<br/>
+	✴擲出失敗時，汝被置於審判天秤，虧欠將被顯明。</p>
 
 <h3 class="ExtraLayer">惡兆 (Grim Portents)</h3>
 <p class="NoIndent">Grim portents are dark designs for what could happen if a danger goes unchecked. Think about what would happen if the danger existed in the world but the PCs didn’t—if all these awful things you’ve conjured up had their run of the world. Scary, huh? The grim portents are your way to codify the plans and machinations of your dangers. A grim portent can be a single interesting event or a chain of steps. When you’re not sure what to do next, push your danger towards resolving a grim portent.</p>
